# physicEngine

./: CMakeLists.txt  classdiagram.puml  main.cpp
Google_tests/: CMakeLists.txt  test.cpp  test2.cpp
include/: app.h  core.h  particle.h  phisicEngine.h  precision.h  timing.h
include/demo/: ballistic.h
src/: app.cpp  core.cpp  main.cpp  particle.cpp  timing.cpp
src/demo/: ballistic.cpp
